--- a/style.css
+++ b/style.css
@@ -298,3 +298,52 @@ a {
   color: #696969;
   font-style: normal;
 }
+
+/* Section 4 styling */
+
+.section4 {
+  width: 100%;
+  height: 608px;
+  padding: 48px 0 50px 0;
+  background-color: #f2f2f2;
+}
+
+.section4-container {
+  padding: 0 15px;
+  margin: 0 101.5px;
+}
+
+.section4-content-box {
+  margin: 0 15px;
+  display: flex;
+}
+
+.section4-left-box {
+  width: 540px;
+  padding: 0 15px;
+}
+
+.section4-left-heading {
+  display: block;
+  font-size: 4rem;
+  font-weight: 500;
+  line-height: 1.4;
+  text-align: left;
+  color: #000;
+}
+
+.section4-left-text {
+  font-size: 1.6rem;
+  font-weight: 400;
+  display: block;
+  text-align: left;
+  color: #696969;
+}
+
+.section4-right-box {
+  width: 540px;
+  padding: 0 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
