--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 .navbar {
+  z-index: 1;
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -91,6 +92,7 @@ a {
   border-radius: 4px;
   border: 1px solid #1893f7;
 }
+
 .apply-btn-box:hover {
   background-color: #0069d9;
   cursor: pointer;
@@ -604,4 +606,554 @@ a {
   font-weight: 600;
   outline: none;
   text-decoration: none;
+}
+
+/* Section 9 Styling */
+
+.section9 {
+  width: 100%;
+  padding: 50px 0;
+}
+
+.section9-container {
+  margin: 0 101.5px;
+  padding: 0 15px;
+}
+
+.section9-heading-box {
+  margin: 0 15px;
+}
+
+.section9-heading {
+  padding: 0 15px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section9-heading :nth-child(1) {
+  font-size: 4rem;
+  font-weight: 600;
+  line-height: 1.31;
+  text-align: center;
+  color: #000;
+}
+
+.section9-heading :nth-child(2) {
+  font-size: 4rem;
+  font-weight: 600;
+  line-height: 1.31;
+  text-align: center;
+  color: rgba(0, 147, 247, 1);
+}
+
+.section9-card-container {
+  padding: 0 15px;
+}
+
+.section-card-heading {
+  margin: 0 19px;
+  padding: 24px 8px 0;
+  display: flex;
+  align-items: center;
+}
+
+.section-card-heading h4 {
+  padding: 20px 0;
+  font-weight: 600;
+  text-align: center;
+  font-size: 20px;
+}
+
+.section9-card-row {
+  padding-bottom: 24px;
+}
+
+.section9-card-row-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 15px;
+  padding-bottom: 24px;
+}
+
+.section9-card1 {
+  width: 350px;
+  padding: 0 15px;
+  height: 276.45px;
+}
+
+.section9-card1 a {
+  display: block;
+  width: 100%;
+  height: 167.45px;
+}
+
+.section9-card1 img {
+  width: 320px;
+  height: 167.45px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+}
+
+.section9-card2 {
+  width: 350px;
+  padding: 0 15px;
+  height: 276.45px;
+}
+
+.section9-card2 a {
+  display: block;
+  width: 100%;
+  height: 167.45px;
+}
+
+.section9-card2 img {
+  width: 320px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+}
+
+.section9-card3 {
+  width: 350px;
+  padding: 0 15px;
+  height: 276.45px;
+}
+
+.section9-card3 a {
+  display: block;
+  width: 100%;
+  height: 167.45px;
+}
+
+.section9-card3 img {
+  width: 320px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+}
+
+.section9-card1-content {
+  width: 100%;
+  height: 109px;
+  padding: 16px 0 8px;
+}
+
+.section9-card1-date {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 35px;
+  font-size: 14px;
+  color: #696969;
+}
+
+.section9-card1-text p {
+  height: 50px;
+  width: 100%;
+  line-height: 25px;
+}
+
+.section9-card2-content {
+  width: 100%;
+  height: 109px;
+  padding: 16px 0 8px;
+}
+
+.section9-card2-date {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 35px;
+  font-size: 14px;
+  color: #696969;
+}
+
+.section9-card2-text p {
+  height: 50px;
+  width: 100%;
+  line-height: 25px;
+}
+
+.section9-card3-content {
+  width: 100%;
+  height: 109px;
+  padding: 16px 0 8px;
+}
+
+.section9-card3-date {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 35px;
+  font-size: 14px;
+  color: #696969;
+}
+
+.section9-card3-text {
+  height: 50px;
+  width: 100%;
+  line-height: 25px;
+}
+
+.link-text {
+  height: 100% !important;
+  display: block;
+  color: #646464;
+  font-size: 16px;
+  text-decoration: none;
+  font-weight: 800;
+}
+
+.section9-button {
+  width: 100%;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.section9-button a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px #217ee6;
+  width: 143.25px;
+  height: 43px;
+  padding: 7px 5px;
+  margin-bottom: 24px;
+  margin-top: 8px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 600;
+  background-image: linear-gradient(to bottom, #216ee6, #2498e3);
+  color: #fff;
+  outline: none;
+  font-style: normal;
+  font-stretch: normal;
+}
+
+/* Section 10 Styling */
+
+.section10 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 425.09px;
+  background-color: #f2f2f2;
+  width: 100%;
+  padding: 50px 0;
+}
+
+.section10-container {
+  padding: 0 15px;
+  margin: 0 101.5px;
+}
+
+.section10-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 15px;
+}
+
+.section10-title-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.section10-column1 {
+  padding: 0 15px;
+}
+
+.section10-title-box {
+  margin-bottom: 30px;
+}
+
+.section10-title {
+  padding: 8px 0;
+  font-size: 4rem;
+  font-weight: 800;
+  line-height: 1.5;
+  text-align: center;
+  color: #000;
+}
+
+.section10-text {
+  display: block;
+  width: 1050px;
+  color: #696969;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-stretch: normal;
+  letter-spacing: normal;
+}
+
+/* Section11 Styling */
+.section11 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 462.09px;
+  padding: 50px 0;
+}
+
+.section11-container {
+  padding: 0 15px;
+  margin: 0 101.5px;
+}
+
+.section11-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 15px;
+  flex-wrap: wrap;
+}
+
+.section11-column1 {
+  padding: 15px 0;
+}
+
+.section11-title-box {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.section11-title {
+  padding: 8px 0;
+  font-size: 4rem;
+  font-weight: 800;
+  line-height: 1.5;
+  text-align: center;
+  color: #000;
+}
+
+.section11-text {
+  display: block;
+  width: 1050px;
+  color: #696969;
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 1.33;
+  font-weight: 400;
+  font-stretch: normal;
+  letter-spacing: normal;
+}
+
+.section11-column {
+  width: 360px;
+  height: 168.03px;
+  padding: 0 15px;
+  margin-bottom: 30px;
+}
+
+.section11-img {
+  max-width: 330px;
+  max-height: 138.03px;
+  border-radius: 8px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.hover-zoom {
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+}
+
+.hover-zoom:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+/* Footer Styling */
+.main-footer {
+  background-color: #0c161b;
+  padding: 30px 0;
+  width: 100%;
+  height: 1332.64px;
+}
+
+.footer-container {
+  width: 100%;
+  /* display: flex;
+    justify-content: center; */
+  padding: 0 15px;
+  /* margin: 0 101.5px; */
+  height: 515.14px;
+  color: #fff;
+}
+
+.main-footer-row {
+  width: 100%;
+  margin: 0 15px;
+}
+
+.main-footer-column {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 0 15px;
+}
+
+.main-footer-content-box {
+  width: 100%;
+}
+
+.footer-logo-img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.footer-logo {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-img {
+  width: 407px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.footer-image {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-heading {
+  font-size: 2.18rem;
+  font-weight: 800;
+  line-height: 1.34;
+  color: #0093f7;
+  text-align: center;
+  height: 93.44px;
+}
+
+.footer-text {
+  display: block;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.3;
+  text-align: center;
+  color: #fff;
+}
+
+.footer-follow-us {
+  display: block;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.3;
+  text-align: center;
+  color: #fff;
+}
+
+.footer-text br {
+  height: 22px;
+}
+
+.social-icon {
+  width: 44.84px;
+  height: 32.64px;
+  margin-bottom: 20px;
+}
+
+.social-icon-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+/* Second Footer Styling */
+.bottom-footer {
+  padding-top: 24px;
+  width: 100%;
+}
+
+.bottom-footer-container {
+  color: #fff;
+  margin: 0 101.5px;
+  padding: 0 15px;
+}
+
+.bottom-footer-row {
+  display: grid;
+  grid-template-columns: 2.5fr 2fr 1fr;
+  margin: 16px 15px 0 15px;
+  padding-bottom: 16px;
+}
+
+.bottom-footer-col1 {
+  margin-top: 25px;
+}
+.bottom-footer-col2 {
+  margin-top: 25px;
+  margin-left: -30px;
+}
+.bottom-footer-col3 {
+  margin-top: 25px;
+  margin-left: -30px;
+}
+
+h5 {
+  margin: 18px 0 24px 0;
+  font-size: 18px;
+  font-weight: 700;
+  display: block;
+}
+
+.bottom-link-text {
+  text-decoration: none;
+  color: #0093ff;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.end-box {
+  height: 125px;
+  padding: 30px 0;
+}
+
+.end-img {
+  display: flex;
+  justify-content: center;
+}
+
+hr {
+  border: 0;
+  outline: none;
+  background-color: transparent;
+  color: #000;
+  margin: 20px 0;
+}
+
+.end-box2 {
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.end-box2 a {
+  width: auto;
+  height: auto;
+}
+
+.copy-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  margin-top: 20px;
 }
