--- a/style.css
+++ b/style.css
@@ -13,18 +13,22 @@ body {
 .navbar {
   z-index: 1;
   display: flex;
+  justify-content: center;
   align-items: center;
   background-color: #fff;
   position: sticky;
   top: 0;
   width: 100%;
   height: 64px;
+  overflow: hidden;
 }
 
 .navbar-container {
   display: flex;
+  justify-content: space-evenly;
+  width: 80%;
   align-items: center;
-  margin: 0 101.5px 0;
+  margin: 0 auto;
   padding: 0 15px 0;
   height: 100%;
 }
@@ -55,9 +59,9 @@ a {
 .navbar-items ul {
   height: 64px;
   align-items: center;
-  width: 895px;
+  width: auto;
   display: flex;
-  margin-left: 345px;
+  margin-left: 280px;
   color: #0c161b;
 }
 
@@ -83,8 +87,8 @@ a {
 }
 
 .apply-btn-box {
-  width: 89px;
-  font-size: 0.875rem;
+  width: 100px;
+  font-size: 0.85rem;
   height: 31px;
   background-color: #1893f7;
   margin: 0 16px;
@@ -101,15 +105,17 @@ a {
 /* Section 1 Styling */
 
 .section1 {
+  display: flex;
+  justify-content: center;
   padding: 50px 0;
   width: 100%;
-  height: 673px;
 }
 
 .section1-container {
-  height: 573px;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  margin: 0 101.5px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
@@ -117,7 +123,9 @@ a {
   width: 100%;
   margin: 0 15px;
   display: flex;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .section1-left-head {
@@ -196,17 +204,16 @@ a {
   height: auto;
 }
 
-/* Section Styling */
+/* Section 2 Styling */
 .section2 {
   width: 100%;
   background-color: #000;
-  height: 518px;
 }
 
 .section2-container {
   height: 100%;
   padding: 0 15px;
-  margin: 0 101.5px;
+  margin: 0 auto;
 }
 
 .section2-content-box {
@@ -215,6 +222,7 @@ a {
   color: #fff;
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
   flex-direction: column;
 }
@@ -247,18 +255,19 @@ a {
 /* Section3 Styling */
 .section3 {
   width: 100%;
-  height: 558px;
   padding: 48px 0 50px 0;
 }
 
 .section3-container {
-  margin: 0 101.5px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
 .section3-content {
   margin: 0 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -305,19 +314,20 @@ a {
 
 .section4 {
   width: 100%;
-  height: 608px;
   padding: 48px 0 50px 0;
   background-color: #f2f2f2;
 }
 
 .section4-container {
   padding: 0 15px;
-  margin: 0 101.5px;
+  margin: 0 auto;
 }
 
 .section4-content-box {
   margin: 0 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .section4-left-box {
@@ -353,18 +363,19 @@ a {
 /* Section 5 Styling */
 .section5 {
   width: 100%;
-  height: 558px;
   padding: 48px 0 50px 0;
 }
 
 .section5-container {
-  margin: 0 101.5px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
 .section5-content {
   margin: 0 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -415,19 +426,20 @@ a {
 
 .section6 {
   width: 100%;
-  height: 500px;
   padding: 50px 0 50px 0;
   background-color: #f2f2f2;
 }
 
 .section6-container {
   padding: 0 15px;
-  margin: 0 101.5px;
+  margin: 0 auto;
 }
 
 .section6-content-box {
   margin: 0 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .section6-left-box {
@@ -482,18 +494,19 @@ a {
 
 .section7 {
   width: 100%;
-  height: 558px;
   padding: 48px 0 50px 0;
 }
 
 .section7-container {
-  margin: 0 101.5px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
 .section7-content {
   margin: 0 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -544,19 +557,20 @@ a {
 
 .section8 {
   width: 100%;
-  height: 608px;
   padding: 48px 0 50px 0;
   background-color: #f2f2f2;
 }
 
 .section8-container {
   padding: 0 15px;
-  margin: 0 101.5px;
+  margin: 0 auto;
 }
 
 .section8-content-box {
   margin: 0 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .section8-left-box {
@@ -616,12 +630,13 @@ a {
 }
 
 .section9-container {
-  margin: 0 101.5px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
 .section9-heading-box {
   margin: 0 15px;
+  text-align: center;
 }
 
 .section9-heading {
@@ -841,7 +856,6 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 425.09px;
   background-color: #f2f2f2;
   width: 100%;
   padding: 50px 0;
@@ -849,7 +863,7 @@ a {
 
 .section10-container {
   padding: 0 15px;
-  margin: 0 101.5px;
+  margin: 0 auto;
 }
 
 .section10-row {
@@ -857,7 +871,9 @@ a {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  flex-wrap: wrap;
   margin: 0 15px;
+  text-align: center;
 }
 
 .section10-title-box {
@@ -886,6 +902,7 @@ a {
 }
 
 .section10-text {
+  text-align: center;
   display: block;
   width: 1050px;
   color: #696969;
@@ -902,13 +919,15 @@ a {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 462.09px;
   padding: 50px 0;
 }
 
 .section11-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   padding: 0 15px;
-  margin: 0 101.5px;
+  margin: 0 auto;
 }
 
 .section11-row {
@@ -988,9 +1007,10 @@ a {
   /* display: flex;
     justify-content: center; */
   padding: 0 15px;
-  /* margin: 0 101.5px; */
+  margin: 0 auto;
   height: 515.14px;
   color: #fff;
+  word-wrap: break-word;
 }
 
 .main-footer-row {
@@ -1037,7 +1057,6 @@ a {
   line-height: 1.34;
   color: #0093f7;
   text-align: center;
-  height: 93.44px;
 }
 
 .footer-text {
@@ -1082,7 +1101,7 @@ a {
 
 .bottom-footer-container {
   color: #fff;
-  margin: 0 101.5px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
@@ -1120,7 +1139,6 @@ h5 {
 }
 
 .end-box {
-  height: 125px;
   padding: 30px 0;
 }
 
@@ -1138,7 +1156,6 @@ hr {
 }
 
 .end-box2 {
-  height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1146,7 +1163,6 @@ hr {
 
 .end-box2 a {
   width: auto;
-  height: auto;
 }
 
 .copy-row {
